--- a/debian/rules
+++ b/debian/rules
@@ -59,7 +59,7 @@ install: build
 	dh_installdirs
 
 	# Add here commands to install the package into debian/DESTDIR.
-	$(MAKE) -C src DESTDIR=$(CURDIR)/debian/caenrfidc/usr install
+	$(MAKE) -C src DESTDIR=$(CURDIR)/debian/caenrfidc install
 
 # Build architecture-independent files here.
 binary-indep: build install
